<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <!--Keys-->
    <string name="google_maps_key">XXXXX</string>
    <string name="raspberry_bluetooth_key">8bacc104-15eb-4b37-bea6-0df3ac364199</string>

    <!--Login-->
    <string name="app_name">Monitoring Probe</string>
    <string name="action_settings">Settings</string>
    <string name="tittle">Monitoring Probe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <!--Register-->
    <string name="title_activity_register">Register now</string>
    <string name="title_register">Create your account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="probe_token">Probe token</string>
    <string name="probe_token_info">* This token is the Raspberry serial number given at startup.</string>
    <string name="submit">Submit</string>

    <!--Home-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="text_ble">Probe with Bluetooth</string>
    <string name="text_air">Air information</string>
    <string name="text_gps">Probe Geolocation</string>
    <string name="text_graphic">Graphics</string>
    <string name="text_weather">Probe Data</string>
    <string name="text_wind">Tips</string>
    <string name="text_settings">Settings</string>

    <!--Connect-->
    <string name="title_activity_connect">Connect</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="send">SEND DATA</string>
    <string name="read">Read</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Probe Data-->
    <string name="probe_tittle">Probe Data</string>
    <string name="last_measurement">Last measurement:</string>
    <string name="air_sub">AIR DATA</string>
    <string name="air_humidity">Air Humidity</string>
    <string name="air_temperature">Air Temperature</string>
    <string name="air_luminosity">Air Luminosity</string>
    <string name="soil_sub">SOIL DATA</string>
    <string name="soil_humidity">Soil Humidity</string>
    <string name="soil_temperature">Soil Temperature</string>
    <string name="soil_capacity">Soil Capacitive</string>
    <string name="weather_sub">WEATHER DATA</string>
    <string name="weather_raindrop_hour">Rainfall (1 hour)</string>
    <string name="weather_raindrop_day">Rainfall (1 day)</string>
    <string name="weather_wind_direction">Wind direction</string>
    <string name="weather_wind_speed_average">Average wind speed</string>
    <string name="weather_wind_speed_max">Max wind speed</string>

    <!--Graph-->
    <string name="title_activity_graphics">Graphics</string>
    <string name="last_day">last day</string>
    <string name="last_week">last week</string>
    <string name="last_month">last month</string>
    <string name="last_day_measurements">Last day measurements</string>
    <string name="last_week_measurements">Last week measurements</string>
    <string name="last_month_measurements">Last month measurements</string>

    <!--Probe with Bluetooth-->
    <string name="title_activity_pair">Probe with Bluetooth</string>
    <string name="pair_title">Collect information from Probe</string>
    <string name="pair_description">\tWhen the Probe has internet, by default it is
        sent all the collected information to the Server. But when the Probe does
        not have internet, it saves all the collected information locally. \n\tTo collect, all
        do you need to do is to be at least 5 meters (or 7 steps) from the Probe
        to PAIR with the Probe via BLUETOOTH, and PRESS the button COLLECT.
    </string>
    <string name="pair_button">COLLECT</string>
    <string name="send_title">Send information to Server</string>
    <string name="send_description">\tAfter collect the information to your phone, you need to
        send the collected information to the Server through the internet. We recommend to send when the phone
        has a Wi-fi connection. \n\tClick on SEND to send the information to the Server.
    </string>
    <string name="send_button">SEND</string>
    <string name="send_info">You don\'t have information collected to send.</string>
    <string name="send_info_collect">You have information collected to send!
        \n\t\t\t\t\t\t\t\tIt will take a while!
    </string>

    <!--Location-->
    <string name="title_activity_location">Probe Geolocation</string>
    <string name="info">Last geolocation:</string>
    <string name="invalid_geolocation">It looks like the Probe has antenna problems. Here is your current location.</string>
</resources>
