<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="8dp"
        android:divider="@android:color/transparent"
        android:clipToPadding="false"
        android:clipChildren="false">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/title_activity_register"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back"
            android:onClick="back">
        </ImageButton>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/title_register"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/colorBackgroundGradient"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorBackgroundGradient"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorBackgroundGradient"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorBackgroundGradient"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/edtToken"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorBackgroundGradient"
            android:drawableStart="@drawable/ic_action_probe"
            android:ems="10"
            android:hint="@string/probe_token"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/probe_token_info"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/probe_token_info"
            android:textColor="@color/colorRed"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_radius"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>